Wed Apr 13 14:47:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (Init_File): add alias File.empty? to File.zero?.
	  [Feature #9969]

Wed Apr 13 14:36:24 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (assign_in_cond): allow multiple assignment in
	  conditional expression.  [Feature #10617]

Wed Apr 13 14:11:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_size): add wrapper function of BIGSIZE and
	  rename the method funtion with _m suffix.

	* numeric.c (int_round_zero_p): extracted from rb_int_round.
	  optimize for Bignum, and convert VALUE returned by Numeric#size
	  to long.

Wed Apr 13 12:00:08 2016  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_basicinstructions.rb: add a test to check access
	  instance variables on special const objects.

	  All of such objects are frozen, so that we can not set instance
	  variables for them. But we can read instance variables and return
	  default value (nil).

Tue Apr 12 20:40:35 2016  Kaneko Yuichiro  <spiketeika@gmail.com>

	* ext/date/date_core.c (time_to_time): should preserve timezone
	  info.  [ruby-core:74889] [Bug #12271]

Tue Apr 12 11:51:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (new_label_body): initialize bit fields, since
	  compile_data_alloc does not clear the memory.  [Bug #12082]

Mon Apr 11 20:18:43 2016  Koichi Sasada  <ko1@atdot.net>

	* vm_backtrace.c (frame2klass): filter only for imemo_ment.
	  T_IMEMO/imemo_iseq can be passed here.

Mon Apr 11 17:43:04 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_optimize): disable tail call optimization in
	  rescued, rescue, and ensure blocks.
	  [ruby-core:73871] [Bug #12082]

Mon Apr 11 06:54:39 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (apply2files): apply to a VALUE vector instead of a
	  temporary array.

Sun Apr 10 20:54:16 2016  Joe Swatosh  <joe.swatosh@gmail.com>

	* ext/win32/lib/win32/registry.rb (DeleteValue, DeleteKey): fix